--- a/Exercici 1.1: Arrow functions_nivell_1_ex_1.html
+++ b/Exercici 1.1: Arrow functions_nivell_1_ex_1.html
@@ -30,6 +30,21 @@
     
         <h1>Funció de fletxa amb 'setTimeout'</h1>
         <p>Crea una funció de fletxa que imprimeixi un missatge a la consola després d'esperar 3 segons.</p>
+
+        <h1>Operador ternari bàsic</h1>
+        <p>: Escriu una funció potConduir que accepti l'edat com a paràmetre i utilitzi l'operador <br>ternari per determinar si l'usuari pot conduir. Si l'edat és 18 o més, ha de retornar '<br>Pots conduir'. Si no, ha de retornar 'No pots conduir'</p>
+
+        <h1>Ús amb operadors de comparació</h1>
+        <p>Escriu una expressió que utilitzi l'operador ternari per determinar quin dels dos nombres <br> donats (num1 i num2) és més gran. Si num1 és més gran, retorna 'num1 és més gran'. <br>Si no, retorna 'num2 és més gran'.</p>
+
+        <h1>Operador ternari dins un bucle</h1>
+        <p>Escriu una funció parOImpar que accepti un array de números i utilitzi un bucle per a <br>recórrer l'array. Dins del bucle, utilitza l'operador ternari per a determinar si <br>cada número és parell o imparell.</p>
+
+        <h1>Ús enllaçat d'operadors ternaris</h1>
+        <p>Escriu una expressió que utilitzi enllaços d'operadors ternaris <br> per determinar si un número és positiu, negatiu o zero.</p>
+
+        <h1>Operador ternari amb funcions</h1>
+        <p>Crea una funció trobarMaxim que accepti tres paràmetres (a, b, c) i utilitzi l'operador ternari per determinar el valor màxim.</p>
     
 
         <p>Veure en la consola!</p>
@@ -76,6 +91,34 @@
             console.log("Hola, aquest és un missatge que s'ha imprès després de 3 segons");
         }, 3000);
 
+        //Operador ternari bàsic
+        const potConduir = (age) => age >= 18 ? "pots conduir" : "no pots conduir";
+        console.log("En el teu cas: " + potConduir(18));
+
+        //Ús amb operadors de comparació
+        let num1 = 30;
+        let num2 = 20;
+        const comparar = (num1, num2) => num1 > num2 ? "el num1 és més gran" : "El num2 és més gran";
+        console.log(comparar(num1, num2));
+
+        //Operador ternari dins un bucle
+        const parOImpar = (numeros) => {
+            let resposta;
+            for (let i = 0; i < numeros.length; i++) {
+                resposta = (numeros[i] % 2 == 0) ? `El número ${numeros[i]} és parell` : `El número ${numeros[i]} és senar`;
+                console.log(resposta);
+            }
+            }    
+        const array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+        parOImpar(array);
+
+        //Ús enllaçat d'operadors ternaris
+        const posNegZero = (num) => num > 0 ? "Positiu" : num < 0 ? "Negatiu" : "Zero";
+        console.log(posNegZero(0));
+
+        //Operador ternari amb funcions
+        const trobarMaxim = (a, b, c) => (a > b && a > c) ? "El valor màxim és el " + a : (b > a && b > c) ? "El valor màxim és el  " + b : "El valor màxim és el " + c;
+        console.log(trobarMaxim(10, 5, 2));
     </script>    
 
 </body>
